[tool.poetry]
name = "venpy"
version = "0.1.0"
description = "Python utilities that Venky likes"
authors = ["Venky Iyer <indigoviolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wrapt = "^1.14.0"


[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]

reportIncompatibleMethodOverride = true
reportMissingImports = true
reportIncompatibleVariableOverride = true
reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryCast = true
