[project]
name = "venpy"
version = "0.2.0"
description = "Python utilities that Venky likes"
authors = [
        {name = "Venky Iyer", email = "indigoviolet@gmail.com"}
        ]
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/indigoviolet/venpy"
keywords = []
classifiers = ['Intended Audience :: Developers']


[tool.hatch.envs.default]
path = ".venv"
python = "3.9"
dependencies = ["wrapt", "typing-extensions", "snoop"]

[tool.hatch.envs.dev]
extra-dependencies = ["mypy", "pytest", "pytest-mock"]

[tool.hatch.build]
packages = ["src/venpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]

reportIncompatibleMethodOverride = true
reportMissingImports = true
reportIncompatibleVariableOverride = true
reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryCast = true
